# opm-core

./: .gitignore  .hgignore  .hgtags  .travis.yml  CMakeLists.txt  CMakeLists_files.cmake  CTestConfig.cmake  Doxyfile  Doxyfile.in  FindUmfPack.cmake  GNUmakefile  GridAdapter.hpp  GridCplusplus.hpp  HybridPressureSolver.hpp  LibMimetic.hpp  Makefile.am  README  README.md  TPFAPressureSolver.hpp  blas_lapack.h  build  call_umfpack.c  call_umfpack.h  cfsh.c  cgridinterface.c  cgridinterface.h  coarse_conn.c  coarse_conn.h  coarse_sys.c  coarse_sys.h  coarsegrid.h  compr_quant.c  configure  configure.ac  dune.module  dune.module.in  facetopology.c  facetopology.h  flow_bc.c  fsh.c  (+83 more)
Documentation/: Doxylocal
Documentation/Figure/: .gitignore
attic/: README.txt  bo_resprop_test.cpp  pvt_test.cpp  relperm_test.cpp  test_agmg.cpp  test_cfs_tpfa.c  test_ert.cpp  test_jacsys.cpp  test_read_grid.c  test_read_vag.cpp  test_readpolymer.cpp
cmake/Modules/: AddOptions.cmake  ConfigVars.cmake  DuneCompat.cmake  Duplicates.cmake  FindCXX11Features.cmake  FindERT.cmake  FindSUPERLU.cmake  FindSuiteSparse.cmake  FindSuperLU.cmake  Finddune-common.cmake  Finddune-istl.cmake  Findopm-core.cmake  LibtoolArchives.cmake  OpmCompile.cmake  OpmDefaults.cmake  OpmDistClean.cmake  OpmDoc.cmake  OpmFiles.cmake  OpmFind.cmake  OpmInstall.cmake  OpmLibMain.cmake  OpmPackage.cmake  OpmProject.cmake  OpmSatellites.cmake  UseCompVer.cmake  UseDebugSymbols.cmake  UseFortranWrappers.cmake  UseOnlyNeeded.cmake  UseOpenMP.cmake  UseOpmFind.cmake  UseOpmPackage.cmake  UseOptimization.cmake  UsePrecompHeaders.cmake  UseSystemInfo.cmake  ewoms-prereqs.cmake  opm-core-prereqs.cmake  opm-material-prereqs.cmake
cmake/Scripts/: DuneCompat2.cmake  configure
common/io/: readtokens.cpp  readvector.cpp
debian/: changelog  control  libopm-core1-dbg.install  rules
dune/common/: CornerpointChopper.hpp  EclipseGridInspector.cpp  EclipseGridParser.cpp  EclipseGridParser.hpp  EclipseGridParserHelpers.hpp  EclipseUnits.hpp  ErrorMacros.hpp  Factory.hpp  Makefile.am  MonotCubicInterpolator.cpp  MonotCubicInterpolator.hpp  RootFinders.hpp  SparseTable.hpp  SpecialEclipseFields.hpp  linInt.hpp
dune/common/param/: Makefile.am  Parameter.hpp  ParameterGroup.cpp  ParameterGroup.hpp  ParameterMapItem.hpp  ParameterRequirement.hpp  ParameterTools.cpp  ParameterTools.hpp  ParameterXML.cpp  ParameterXML.hpp
dune/common/param/test/: param_test.cpp
dune/common/param/tinyxml/: tinyxml.h
dune/common/test/: Makefile.am  sparsevector_test.cpp  unit_test.cpp
examples/: ImplicitTransportDefs.hpp  Makefile.am  cart_grid.c  cart_grid.h  compute_tof.cpp  import_rewrite.cpp  mirror_grid.cpp  refine_wells.cpp  reorder-qfs.c  reorder-qfs.cpp  scaneclipsedeck.c  sim_2p_incomp_reorder.cpp  sim_wateroil.cpp  spu_2p.cpp  transport_source.c
jenkins/: README.md  build-opm-core.sh  build-pr.sh  build.sh
lib/pkgconfig/: opm-core.pc.in
m4/: agmg.m4  ax_blas.m4  ax_boost_date_time.m4  ax_boost_filesystem.m4  ax_boost_system.m4  ax_boost_unit_test_framework.m4  ax_dune_common.m4  ax_dune_istl.m4  ax_lapack.m4  cxx0x_compiler.m4  cxx0x_nullptr.m4  cxx0x_static_assert.m4  ert.m4  opm_boost_base.m4  opm_core.m4  opm_core_check_modules.m4  opm_dynlink_boost_test.m4  opm_lapack.m4  opm_superlu.m4
opm/core/: BlackoilState.hpp  ColumnExtract.hpp  GridAdapter.hpp  GridManager.cpp  GridManager.hpp  doxygen_main.hpp  grid.c  grid.h  newwells.c  opm-core-pch.hpp  version.c  version.h  well_control_type.h
opm/core/utility/parameters/: Makefile.am  Parameter.cpp  Parameter.hpp  ParameterGroup.cpp  ParameterGroup.hpp  ParameterGroup_impl.hpp  ParameterMapItem.hpp  ParameterRequirement.hpp  ParameterStrings.hpp  ParameterTools.cpp  ParameterTools.hpp  ParameterXML.cpp  ParameterXML.hpp  param.dtd
opm/core/utility/parameters/test/: Makefile.am  param_test.cpp
opm/core/utility/parameters/tinyxml/: Makefile.am  tinystr.cpp  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
opmcore/pressure/: GridAdapter.hpp  fsh.c  (+2 more)
redhat/: opm-core.spec
src/: CSRMatrixBlockAssembler.hpp  GridAdapter.hpp  HybridPressureSolver.hpp  ImplicitAssembly.hpp  ImplicitTransport.hpp  JacobianSystem.hpp  Makefile.am  NormSupport.hpp  SimpleFluid2p.hpp  SimpleFluid2pWrapper.hpp  SinglePointUpwindTwoPhase.hpp  TPFACompressiblePressureSolver.hpp  TPFAPressureSolver.hpp  blas_lapack.h  cfsh.c  coarse_conn.c  coarse_conn.h  coarse_sys.c  coarse_sys.h  compr_quant.c  compr_quant_general.c  compr_source.c  fsh.c  fsh_common_impl.c  grid.h  hash_set.h  hybsys.c  hybsys_global.c  ifsh.c  ifsh_ms.c  ifsh_ms.h  spu_explicit.c  spu_explicit.h  spu_implicit.c  spu_implicit.h  test_cfs_tpfa.c  test_sf2p.cpp  trans_tpfa.c  well.c
tests/: CORNERPOINT_ACTNUM.DATA  Makefile.am  bo_fluid_p_and_z_deps.cpp  bo_fluid_pressuredeps.cpp  bo_fluid_test.cpp  bo_resprop_test.cpp  compressed_gridproperty.data  extratestdata.xml  param_test.cpp  pvt_test.cpp  relperm_test.cpp  sparsetable_test.cpp  sparsevector_test.cpp  test_EclipseWriteRFTHandler.cpp  test_EclipseWriter.cpp  test_agmg.cpp  test_blackoilfluid.cpp  test_cartgrid.cpp  test_cfs_tpfa.c  test_column_extract.cpp  test_compressedpropertyaccess.cpp  test_cubic.cpp  test_ert.cpp  test_geom2d.cpp  test_gridutilities.cpp  test_jacsys.cpp  test_lapack.cpp  test_minpvprocessor.cpp  test_nonuniformtablelinear.cpp  test_param.cpp  test_parser.cpp  test_propertysystem.cpp  test_quadratures.cpp  test_readWriteWellStateData.cpp  test_read_vag.cpp  test_readpolymer.cpp  test_readvector.cpp  test_sf2p.cpp  test_sparsetable.cpp  test_spline.cpp  (+9 more)
tests/not-unit/: README.txt  bo_resprop_test.cpp  monotcubicinterpolator_test.cpp  pvt_test.cpp  relperm_test.cpp  test_agmg.cpp  test_cartgrid.cpp  test_cfs_tpfa.c  test_ert.cpp  test_jacsys.cpp  test_lapack.cpp  test_newfluidinterface.cpp  test_read_grid.c  test_read_vag.cpp  test_readpolymer.cpp  test_sf2p.cpp  test_writeVtkData.cpp  unit_test.cpp
travis/: build-and-test-opm-core.sh  build-opm-core.sh  clone-and-build-dune-istl.sh  clone-and-build-superlu.sh
tutorials/: Makefile.am
(+325 files in other folders)
